gesture_ros_ws/log/build_2024-02-12_20-14-29/gesture_control/stderr.log
  File "/home/locobot/ros_ws/install/gesture_control/lib/python3.8/site-packages/gesture_control/mediaPipeNode.py", line 17
    def main(args=None):
    ^
SyntaxError: invalid syntax

